# latex-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose-snippet.yml  pyproject.toml  server.py
.github/workflows/: ci.yml
deployment/config/: mcp-latex.service  nginx.conf
deployment/docker/: Dockerfile.simple  README.md  docker-compose-standalone.yml  docker-compose.yml
plugins/latex/: __init__.py  engine.py  snippets.py
plugins/latex/snippets/: equation.json  figure.json  multiple_choice.json
plugins/latex/templates/: article.tex  beamer.tex  macros.sty  math.tex  worksheet.tex
tests/: test_engine.py  test_snippets.py
